chip-shop/kubernetes/postgres-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    app: postgres
spec:
  containers:
  - name: postgres-container
    image: postgres
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 5432
    volumeMounts:
      - mountPath: /var/lib/postgresql/data/pgdata
        name: db-data
  volumes:
    - name: db-data
      emptyDir: {}
