chip-shop/kubernetes/chip-shop-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chip-shop-service
spec:
  selector:
    app: chip-shop-app
  ports:
  - port: 8080
    targetPort: 8080
